<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_item_goods_list_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gv_goodslist_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_goods_image"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/bg_goods" />

            <ImageView
                android:id="@+id/iv_promotion_imgurl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/hot"
                android:visibility="visible" />

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tv_goods_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="5dp"
                    android:lines="2"
                    android:singleLine="false"
                    android:text="@string/gv_product_name"
                    android:textColor="@color/gv_product_name"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_gv_integral_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gv_integral_price"
                    android:textColor="@color/gv_integral_price"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gv_tv_integral_l"
                    android:textColor="@color/gv_tv_integral"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_gv_integral_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gv_integral_num"
                    android:textColor="@color/gv_tv_integral"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gv_tv_integral_r"
                    android:textColor="@color/gv_tv_integral"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="13dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">


                    <TextView
                        android:id="@+id/tv_immediately_change"
                        android:layout_width="70dp"
                        android:layout_height="20dp"
                        android:background="@drawable/immediately_change"
                        android:gravity="center"
                        android:text="@string/immediately_change"
                        android:textColor="@color/tv_immediately_change"
                        android:textSize="13sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_disable_change"
                        android:layout_width="70dp"
                        android:layout_height="20dp"
                        android:background="@drawable/disable_change"
                        android:gravity="center"
                        android:text="@string/disable_change"
                        android:textColor="@color/tv_immediately_change"
                        android:textSize="13sp"
                        android:visibility="visible" />

                </FrameLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>