<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_change_pwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/person_centered_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/titlebar_personal_center" />
    <!--旧密码start-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/cutting_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/my_order_bg"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/old_pwd"
                android:textColor="@color/titleTextC"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_oldPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@null"
                android:hint="@string/ent_old_pwd"
                android:singleLine="true"
                android:textColor="@color/titleTextC"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cutting_line" />
    <!--旧密码end-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <!--新密码start-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cutting_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/my_order_bg"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/new_pwd"
                    android:textColor="@color/titleTextC"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_newPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@null"
                    android:hint="@string/ent_new_pwd"
                    android:singleLine="true"
                    android:textColor="@color/titleTextC"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cutting_line" />
        <!--新密码end-->
        <!--确认密码 start-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/my_order_bg"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/confrim_pwd"
                    android:textColor="@color/titleTextC"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_confirmNewPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@null"
                    android:hint="@string/ent_con_pwd"
                    android:singleLine="true"
                    android:textColor="@color/titleTextC"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cutting_line" />
        <!--确认密码end-->
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp">


        <Button
            android:id="@+id/btn_confirm"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/quit_button"
            android:text="@string/affirm"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_disconfirm"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/disable_button"
            android:text="@string/affirm"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:text="@string/forget_pwd"
        android:textColor="@color/titleTextR"
        android:textSize="14sp" />

</LinearLayout>