<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_account_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/person_centered_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/titlebar_personal_center" />

    <!--手机号 start-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/cutting_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/my_order_bg"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:text="@string/phone_num"
                android:textColor="@color/titleTextC"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_phoneNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.68"
                android:background="@null"
                android:hint="@string/en_phonum"
                android:inputType="phone"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/titleTextC"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/Ibtn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_delete" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cutting_line" />
    <!--手机号 end-->

    <!--验证码start-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/my_order_bg"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:text="@string/identifying_code"
                android:textColor="@color/titleTextC"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_identifyingCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.38"
                android:background="@null"
                android:hint="@string/en_identifyc"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/titleTextC"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="1dp"
                    android:layout_height="35dp"
                    android:background="@color/cutting_line" />

                <Button
                    android:id="@+id/btn_sendSMS"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="end|center_vertical"
                    android:text="@string/sen_idecode"
                    android:textColor="@color/titleTextR"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cutting_line" />
    <!--验证码end-->

    <!--新登录密码 start-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/cutting_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/my_order_bg"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:text="@string/new_login_code"
                android:textColor="@color/titleTextC"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_EnterNewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.68"
                android:background="@null"
                android:hint="@string/enter_nlcode"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/titleTextC"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cutting_line" />
    <!--新登录密码 end-->

    <!--确认新登录密码 start-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/my_order_bg"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:text="@string/affirm_new_login_code"
                android:textColor="@color/titleTextC"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_EnterPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.68"
                android:background="@null"
                android:hint="@string/enter_anlcode"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/titleTextC"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cutting_line" />
    <!--确认新登录密码 end-->

    <!--确认按钮 start-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp">

        <Button
            android:id="@+id/btn_login"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/quit_button"
            android:text="@string/affirm"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_disable_login"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/disable_button"
            android:text="@string/affirm"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </FrameLayout>
    <!--确认按钮 end-->


</LinearLayout>