<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/message_list_bg"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/message_list_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_messageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_messageTitle"
                android:textColor="@color/my_messageTitle"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/my_messageDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lines="2"
                android:text="@string/my_messageDes"
                android:textColor="@color/my_messageTitle"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/my_messageData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/my_messageData"
                android:textColor="@color/my_messageData"
                android:textSize="12sp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3">

            <ImageView
                android:id="@+id/my_messageImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/bg_wdxx" />
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>

